ingress-tls/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: giropops
  name:  redis-deployment
  labels:
    app:  redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app:  redis
    spec:
      containers:
      - name:  redis
        image:  redis
        resources:
          requests:
            cpu: "0.25"
            memory: 50Mi
          limits:
            cpu: "0.5"
            memory: 100Mi
        ports:
        - containerPort:  6379
